SubBt/force-app/main/default/objects/Past_Project__c/Past_Project__c.object-meta.xml
<CustomObject>
    <label>Past Project</label>
    <nameField>
        <displayFormat>PP-{000}</displayFormat>
        <label>Past Project Names</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Past Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>