SubBt/force-app/main/default/objects/Past_Project__c/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <label>Contact Cell</label>
    <type>Phone</type>
</CustomField>