SubBt/force-app/main/default/objects/Past_Project__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <type>TextArea</type>
</CustomField>