SubBt/force-app/main/default/objects/Past_Project__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <label>Contract Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>