SubBt/force-app/main/default/objects/Past_Project__c/fields/Pre_Qual__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Qual</label>
    <referenceTo>Pre_Qual__c</referenceTo>
    <relationshipLabel>Past Projects</relationshipLabel>
    <relationshipName>Past_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>